--- a/run/config/fabric/indigo-renderer.properties
+++ b/run/config/fabric/indigo-renderer.properties
@@ -1,5 +1,5 @@
 #Indigo properties file
-#Sun Sep 24 18:04:56 EDT 2023
+#Fri Dec 15 23:48:13 EST 2023
 debug-compare-lighting=auto
 fix-exterior-vertex-lighting=auto
 ambient-occlusion-mode=hybrid
