Initial Commit - added dependencies

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ org.gradle.parallel=true
 # check these on https://fabricmc.net/develop
 minecraft_version=1.20.1
 yarn_mappings=1.20.1+build.9
-loader_version=0.14.21
+loader_version=0.14.22
 
 # Mod Properties
 mod_version=1.2.0
@@ -15,3 +15,5 @@ archives_base_name=awesomearmaments
 
 # Dependencies
 fabric_version=0.85.0+1.20.1
+spell_power_version=0.10.2+1.20.1
+tiny_config_version=2.3.2
