--- a/run/config/fabric/indigo-renderer.properties
+++ b/run/config/fabric/indigo-renderer.properties
@@ -1,5 +1,5 @@
 #Indigo properties file
-#Sun Dec 17 18:58:51 EST 2023
+#Sat Apr 13 00:04:04 EDT 2024
 debug-compare-lighting=auto
 fix-exterior-vertex-lighting=auto
 ambient-occlusion-mode=hybrid
