--- a/build.gradle
+++ b/build.gradle
@@ -56,8 +56,11 @@ dependencies {
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
 	//Dependencies
+	include(implementation(annotationProcessor("io.github.llamalad7:mixinextras-fabric:${project.mixin_extras_version}")))
 	implementation include("com.github.ZsoltMolnarrr:TinyConfig:${project.tiny_config_version}")
 	modImplementation("maven.modrinth:spell-power:${project.spell_power_version}")
+	modImplementation "maven.modrinth:ranged-weapon-api:${project.ranged_weapon_api_version}"
+
 
 	// Uncomment the following line to enable the deprecated Fabric API modules. 
 	// These are included in the Fabric API production distribution and allow you to update your mod to the latest modules at a later more convenient time.
