--- a/gradle.properties
+++ b/gradle.properties
@@ -5,15 +5,17 @@ org.gradle.parallel=true
 # Fabric Properties
 # check these on https://fabricmc.net/develop
 minecraft_version=1.20.1
-yarn_mappings=1.20.1+build.9
+yarn_mappings=1.20.1+build.10
 loader_version=0.14.22
 
 # Mod Properties
 mod_version=1.0.0
-maven_group=net.thev123.awesomearmaments
-archives_base_name=awesomearmaments
+maven_group=net.thev123.magusarmors
+archives_base_name=magusarmors
 
 # Dependencies
+mixin_extras_version=0.2.0
 fabric_version=0.85.0+1.20.1
 spell_power_version=0.10.2+1.20.1
 tiny_config_version=2.3.2
+ranged_weapon_api_version=1.1.1+1.20.1
