recipes done - add runes dependency

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,4 @@ fabric_version=0.85.0+1.20.1
 spell_power_version=0.10.2+1.20.1
 tiny_config_version=2.3.2
 ranged_weapon_api_version=1.1.1+1.20.1
+runes_version=0.9.11+1.20.1
