--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,7 @@ dependencies {
 	implementation include("com.github.ZsoltMolnarrr:TinyConfig:${project.tiny_config_version}")
 	modImplementation("maven.modrinth:spell-power:${project.spell_power_version}")
 	modImplementation "maven.modrinth:ranged-weapon-api:${project.ranged_weapon_api_version}"
+	modImplementation("maven.modrinth:runes:${project.runes_version}-fabric")
 
 
 	// Uncomment the following line to enable the deprecated Fabric API modules. 
